--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,1 @@
-insurnace.provider.url=http://localhost:8080/insurnace-service/getUpdatePlans
+eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka
